# ledger-ironfish

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ledger_app.toml
.github/workflows/: codeql.yml  main.yml
app/: Makefile
app/rust/: .gitignore  Cargo.toml
app/rust/.cargo/: config  config.toml
app/rust/include/: rslib.h
app/rust/src/: allocator.rs  constants.rs  crypto.rs  dkg.rs  heap.rs  ironfish.rs  lib.rs  parser.rs  signing.rs
app/rust/src/bolos_local/: mod.rs  rng.rs  zemu_log.rs
app/rust/src/crypto/: chacha20poly.rst  utils.rs
app/rust/src/ironfish/: public_address.rs
app/rust/src/parser/: asset_identifier.rs  constants.rs  memo.rs  merkle_note.rs  note.rs
app/src/: apdu_handler.c  coin.h  crypto.c  crypto.h  crypto_helper.c  crypto_helper.h  dkg.c  dkg.h  dkg_parser.c  dkg_parser.h  keys_def.h  keys_personalizations.h  parser.c  parser_impl.c  parser_impl.h  parser_impl_common.c  parser_impl_common.h  parser_print_common.c  parser_print_common.h  parser_txdef.h  parser_utils.c  parser_utils.h  review_keys.c  shim.c
app/src/blake2s/: blake2-impl.h  blake2.h  blake2s-ref.c
app/src/c_api/: rust.c
app/src/common/: actions.c  actions.h  parser.h  parser_common.h  tx.c  tx.h
app/src/crypto_helper/: chacha.c  chacha.h
docs/: APDUSPEC.md
js/: package.json
js/src/: consts.ts  helper.ts  index.ts  types.ts
tests/: dkg.cpp  keys.cpp  signature.cpp  testcases.json  ui_tests.cpp  utils.cpp  utils.h
tests_zemu/: package.json
tests_zemu/tests/: common.ts  dkg.test.ts  standard.test.ts
