[package]
authors = ["Zondax AG <info@zondax.ch>"]
name = "rslib"
version = "0.1.0"
edition = "2021"
readme = "README.md"
resolver = "2"

[lib]
name = "rslib"
crate-type = ["staticlib"]


[dependencies]
jubjub = { version = "0.10.0", default-features = false }

embedded-alloc = { version = "0.5.1" }
critical-section = { version = "1.1.2" }

bolos = { path = "../../deps/ledger-rust/bolos" }
bolos-common = { path = "../../deps/ledger-rust/bolos-common" }
zemu-sys = { path = "../../deps/ledger-rust/zemu" }

# From https://github.com/iron-fish/ironfish-frost-ledger/tree/ad03ed83b5f2ebf4f494ae260fa1cf81c4599d58
ironfish-frost = { git = "https://github.com/iron-fish/ironfish-frost.git", branch = "no-std", default-features = false, features = ["dkg"]}
getrandom = { version = "0.2", features = ["custom"] }

[target.thumbv6m-none-eabi.dev-dependencies]
panic-halt = "0.2.0"

[profile.release]
lto = false
codegen-units = 1
debug = false
opt-level = "z"
overflow-checks = true

[profile.dev]
lto = "fat"
codegen-units = 1
debug=true
opt-level = 3
panic = "abort"

[features]
default = []
# use when compiling this crate as a lib for the cpp_tests suite
cpp_tests = []


# From https://github.com/iron-fish/ironfish-frost-ledger/tree/ad03ed83b5f2ebf4f494ae260fa1cf81c4599d58
# TODO: This change shouldn't be necessary, the ledger targets clearly define atomics as only supporting 32 not 64 (as seen in /opt/rustup/toolchains/1.75.0-aarch64-unknown-linux-musl/lib/rustlib/nanosplus/target.json)
# solve why this is happening rather than using modified radium
[patch.crates-io]
radium = { git = "https://github.com/iron-fish/radium", rev = "674c8faf1e74f931a58671f70586e6435353e9b6" }