[package]
authors = ["Zondax AG <info@zondax.ch>"]
name = "rslib"
version = "0.1.0"
edition = "2021"
readme = "README.md"
resolver = "2"

[lib]
name = "rslib"
crate-type = ["staticlib"]


[dependencies]
jubjub = { version = "0.10.0", default-features = false }
blake2b_simd = { version = "1.0.0", default-features = false }

[target.thumbv6m-none-eabi.dev-dependencies]
panic-halt = "0.2.0"

[profile.release]
lto = false
codegen-units = 1
debug = false
opt-level = "z"
overflow-checks = true

[profile.dev]
lto = "fat"
codegen-units = 1
debug=true
opt-level = 3
panic = "abort"

[features]
default = []
# use when compiling this crate as a lib for the cpp_tests suite
cpp_tests = []
